--- a/generators/templates/stories.tsx.hbs
+++ b/generators/templates/stories.tsx.hbs
@@ -1,9 +1,18 @@
 import { Meta, StoryObj } from '@storybook/react'
 import {{pascalCase name}} from '.'
+const meta: Meta<typeof {{pascalCase name}}> = {
+  component: {{pascalCase name}}
+  }
+  export default meta;
+  type Story = StoryObj<typeof {{pascalCase name}}>
+    export const Default: Story = {}
 
-export default {
-title: '{{pascalCase name}}',
-component: {{pascalCase name}}
-} as Meta
+    {{!-- import { Meta, StoryObj } from '@storybook/react'
+    import {{pascalCase name}} from '.'
 
-export const Default: StoryObj = {}
+    export default {
+    title: '{{pascalCase name}}',
+    component: {{pascalCase name}}
+    } as Meta
+
+    export const Default: StoryObj = {} --}}
