--- a/generators/templates/test.tsx.hbs
+++ b/generators/templates/test.tsx.hbs
@@ -2,12 +2,10 @@ import { render, screen } from '@testing-library/react'
 
 import {{pascalCase name}} from '.'
 
-describe('
-<{{pascalCase name}} />', () => {
-it('should render the heading', () => {
-const { container } = render(
-<{{pascalCase name}} />)
-expect(screen.getByRole('heading', { name: /{{pascalCase name}}/i })).toBeInTheDocument()
-expect(container.firstChild).toMatchSnapshot()
-})
+describe('<{{pascalCase name}} />', () => {
+  it('should render the {{pascalCase name}}', () => {
+  const { container } = render(<{{pascalCase name}} />)
+  expect(screen.getByRole('heading', { name: /{{pascalCase name}}/i })).toBeInTheDocument() 
+  expect(container.firstChild).toMatchSnapshot()
+  })
 })
